--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -19,14 +19,19 @@
   weight = 30
 
 [[main]]
-  name = "Publications"
-  url = "#featured"
-  weight = 40
+  name = "Experiences"
+  url = "#experience"
+  weight = 50
+
+#[[main]]
+  #name = "Publications"
+  #url = "#featured"
+  #weight = 60
 
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 60
+  weight = 70
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/media/cv.pdf` and uncomment the lines below.
