--- a/exampleSite/config/_default/menus.toml
+++ b/exampleSite/config/_default/menus.toml
@@ -19,13 +19,13 @@
   weight = 30
 
 [[main]]
-  name = "Publications"
-  url = "#featured"
+  name = "Experiences"
+  url = "#experience/"
   weight = 40
 
 [[main]]
-  name = "Courses"
-  url = "courses/"
+  name = "Publications"
+  url = "#featured"
   weight = 50
 
 [[main]]
