--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,7 +9,7 @@
   weight = 10
 
 [[main]]
-  name = "Posts"
+  name = "Blog"
   url = "#posts"
   weight = 20
 
@@ -17,6 +17,11 @@
   name = "Projects"
   url = "#projects"
   weight = 30
+
+[[main]]
+  name = "Presentations"
+  url = "#talks"
+  weight = 40
 
 [[main]]
   name = "Experiences"
