--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -42,5 +42,5 @@
 # To enable, copy your resume/CV to `static/media/cv.pdf` and uncomment the lines below.
  [[main]]
     name = "CV"
-    url = `static/files/cv.pdf`
+    url = "static/files/cv.pdf"
     weight = 70
