--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -66,7 +66,7 @@ ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "
     startLevel = 2
     endLevel = 3
 
-[imaging]
+ [imaging]
   resampleFilter = "lanczos"
   quality = 75
   anchor = "smart"  # Anchor for cropping. Options include Smart and Center.
@@ -79,7 +79,7 @@ ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "
   author = "authors"
 
 # Related content.
-[related]
+#[related]
   threshold = 80.0
   includeNewer = true
   toLower = true
