--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -79,7 +79,7 @@ ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "
   author = "authors"
 
 # Related content.
-#[related]
+[related]
   threshold = 80.0
   includeNewer = true
   toLower = true
